--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 body{
-  font-size: ;
-  line-height: ;
   color: #000000;
-  font-weight: bold;
-  font-family: PT Sans;
+  font-family: 'Open Sans', sans-serif;
 }
 h1{
   font-size: 21px;
   line-height: 24px;
   color: #000000;
   font-weight: bold;
-  font-family: PT Sans, PT Sans Regular;
+  font-family: 'Open Sans', sans-serif;
 }
 h2{
   font-size: 21px;
   line-height: 26px;
   color: #000000;
   font-weight: bold;
-  font-family: PT Sans;
+  font-family: 'Open Sans', sans-serif;
 }
